--- a/ansible-apim-4.1.0.1/dev/host_vars/apim_1.yml
+++ b/ansible-apim-4.1.0.1/dev/host_vars/apim_1.yml
@@ -18,12 +18,9 @@
 # NOTE: The parameterized values has the default values from the original pack. Please change them according to your
 # requirements. If you need to add additional configurations, please use the custom.yml under each role.
 
-hostname: localhost
+hostname: ec2-44-201-113-40.compute-1.amazonaws.com
 ports_offset: 0
 
-# User manager configurations
-admin_username: admin
-admin_password: admin
 
 # api-manager.xml configs
 oauth_configs_revoke_api_url: https://localhost:${https.nio.port}/revoke
