--- a/ansible-apim-4.1.0.1/dev/group_vars/apim.yml
+++ b/ansible-apim-4.1.0.1/dev/group_vars/apim.yml
@@ -30,6 +30,10 @@ security_file_location: "{{ product_package_location }}/security"
 # Set backup_enabled to true to backup <carbon-home>/repository/deployment/server directory
 backup_enabled: false
 
+# User manager configurations
+admin_username: admin
+admin_password: admin
+
 # Performance tuning configurations for the operating system
 enable_performance_tuning: false
 performance_tuning_file_list:
@@ -82,11 +86,11 @@ java_home: "{{ java_dir }}/{{ jdk_name }}"
 
 # Server URL of the Authentication service. Make sure to import the Key Manager's public certificate to WSO2 API-M's
 # client-truststore.jks. For more information, see https://docs.wso2.com/display/ADMIN44x/Creating+New+Keystores
-key_manager_server_url: https://localhost:${mgt.transport.https.port}/services/
+key_manager_server_url: https://ec2-44-201-113-40.compute-1.amazonaws.com:${mgt.transport.https.port}/services/
 
 # API Store related configurations
-api_devportal_url: https://localhost:${mgt.transport.https.port}/devportal
-api_devportal_server_url: https://localhost:${mgt.transport.https.port}/services/
+api_devportal_url: https://ec2-44-201-113-40.compute-1.amazonaws.com:${mgt.transport.https.port}/devportal
+api_devportal_server_url: https://ec2-44-201-113-40.compute-1.amazonaws.com:${mgt.transport.https.port}/services/
 
 # Gateway configurations
 gateway_environments:
@@ -94,13 +98,13 @@ gateway_environments:
       name: 'Default',
       provider: 'wso2',
       description: 'This is a hybrid gateway that handles both production and sandbox token traffic.',
-      service_url: 'https://localhost:${mgt.transport.https.port}/services/',
-      ws_endpoint: 'ws://localhost:9099',
-      wss_endpoint: 'wss://localhost:8099',
-      http_endpoint: 'http://localhost:8280',
-      https_endpoint: 'https://localhost:8243',
-      websub_event_receiver_http_endpoint: "http://localhost:9021",
-      websub_event_receiver_https_endpoint: "https://localhost:8021"}
+      service_url: 'https://ec2-44-201-113-40.compute-1.amazonaws.com:${mgt.transport.https.port}/services/',
+      ws_endpoint: 'ws://ec2-44-201-113-40.compute-1.amazonaws.com:9099',
+      wss_endpoint: 'wss://ec2-44-201-113-40.compute-1.amazonaws.com:8099',
+      http_endpoint: 'http://ec2-44-201-113-40.compute-1.amazonaws.com:8280',
+      https_endpoint: 'https://ec2-44-201-113-40.compute-1.amazonaws.com:8243',
+      websub_event_receiver_http_endpoint: "http://ec2-44-201-113-40.compute-1.amazonaws.com:9021",
+      websub_event_receiver_https_endpoint: "https://ec2-44-201-113-40.compute-1.amazonaws.com:8021"}
 
 sync_runtime_gateway_labels: ["Default"]
 
