--- a/ansible-apim-4.1.0.1/dev/group_vars/apim.yml
+++ b/ansible-apim-4.1.0.1/dev/group_vars/apim.yml
@@ -78,7 +78,7 @@ pack_location: local
 #remote_pack: "<URL_TO_APIM_PACK>" Ex:- "https://github.com/wso2/product-apim/releases/download/v4.1.0/wso2am-4.1.0.zip"
 
 # JDK Distributions
-setup_java_enabled: false #If this is set to false java_home variable below needs to be specified.
+setup_java_enabled: true #If this is set to false java_home variable below needs to be specified.
 jdk_name: amazon-corretto-11.0.14.1-linux-x64 # Update this as per jdk version you use
 java_dir: /opt
 java_symlink: "{{ java_dir }}/java"
