Mudando senha do admin

--- a/ansible-apim-4.1.0.1/dev/group_vars/apim.yml
+++ b/ansible-apim-4.1.0.1/dev/group_vars/apim.yml
@@ -34,7 +34,7 @@ backup_enabled: false
 
 # User manager configurations
 admin_username: admin
-admin_password: admin
+admin_password: adminadmin
 
 # Performance tuning configurations for the operating system
 enable_performance_tuning: false
