--- a/ansible-apim-4.1.0.1/dev/group_vars/apim.yml
+++ b/ansible-apim-4.1.0.1/dev/group_vars/apim.yml
@@ -152,18 +152,18 @@ wso2shared_db_validation_query: SELECT 1
 
 # Key Store and Trust Store configuration
 primary_key_store_name: wso2carbon.jks
-primary_key_store_password: wso2carbon
-primary_key_store_key_password: wso2carbon
+primary_key_store_password: supersenha
+primary_key_store_key_password: supersenha
 primary_key_store_key_alias: wso2carbon
 
 # Client trustore configurations
 trust_store_name: client-truststore.jks
-trust_store_password: wso2carbon
+trust_store_password: supersenha
 
 # The KeyStore which is used for encrypting/decrypting internal data. This block is read by Carbon Crypto Service
 internal_key_store_name: wso2carbon.jks
-internal_key_store_key_password: wso2carbon
-internal_key_store_password: wso2carbon
+internal_key_store_key_password: supersenha
+internal_key_store_password: supersenha
 internal_key_store_key_alias: wso2carbon
 
 # The KeyStore which is used for encrypting/decrypting internal data. This block is read by Carbon Crypto Service
@@ -171,8 +171,8 @@ listner_profile_key_store_bind_address: 0.0.0.0
 
 # The KeyStore which is used for encrypting/decrypting internal data. This block is read by Carbon Crypto Service
 tls_key_store_name: wso2carbon.jks
-tls_key_store_key_password: wso2carbon
-tls_key_store_password: wso2carbon
+tls_key_store_key_password: supersenha
+tls_key_store_password: supersenha
 tls_key_store_key_alias: wso2carbon
 
 # If following is enabled all the sensitive information in server configurations will be encrypted.
