--- a/ansible-apim-4.1.0.1/dev/group_vars/apim.yml
+++ b/ansible-apim-4.1.0.1/dev/group_vars/apim.yml
@@ -91,11 +91,11 @@ setup_wso2_enabled: false
 
 # Server URL of the Authentication service. Make sure to import the Key Manager's public certificate to WSO2 API-M's
 # client-truststore.jks. For more information, see https://docs.wso2.com/display/ADMIN44x/Creating+New+Keystores
-key_manager_server_url: https://LB-WSO2-1091626109.us-east-1.elb.amazonaws.com:${mgt.transport.https.port}/services/
+key_manager_server_url: https://lb-wso2-1091626109.us-east-1.elb.amazonaws.com:${mgt.transport.https.port}/services/
 
 # API Store related configurations
-api_devportal_url: https://LB-WSO2-1091626109.us-east-1.elb.amazonaws.com:${mgt.transport.https.port}/devportal
-api_devportal_server_url: https://LB-WSO2-1091626109.us-east-1.elb.amazonaws.com:${mgt.transport.https.port}/services/
+api_devportal_url: https://lb-wso2-1091626109.us-east-1.elb.amazonaws.com:${mgt.transport.https.port}/devportal
+api_devportal_server_url: https://lb-wso2-1091626109.us-east-1.elb.amazonaws.com:${mgt.transport.https.port}/services/
 
 # Gateway configurations
 gateway_environments:
@@ -103,13 +103,13 @@ gateway_environments:
       name: 'Default',
       provider: 'wso2',
       description: 'This is a hybrid gateway that handles both production and sandbox token traffic.',
-      service_url: 'https://LB-WSO2-1091626109.us-east-1.elb.amazonaws.com:${mgt.transport.https.port}/services/',
-      ws_endpoint: 'ws://LB-WSO2-1091626109.us-east-1.elb.amazonaws.com:9099',
-      wss_endpoint: 'wss://LB-WSO2-1091626109.us-east-1.elb.amazonaws.com:8099',
-      http_endpoint: 'http://LB-WSO2-1091626109.us-east-1.elb.amazonaws.com:8280',
-      https_endpoint: 'https://LB-WSO2-1091626109.us-east-1.elb.amazonaws.com:8243',
-      websub_event_receiver_http_endpoint: "http://LB-WSO2-1091626109.us-east-1.elb.amazonaws.com:9021",
-      websub_event_receiver_https_endpoint: "https://LB-WSO2-1091626109.us-east-1.elb.amazonaws.com:8021"}
+      service_url: 'https://lb-wso2-1091626109.us-east-1.elb.amazonaws.com:${mgt.transport.https.port}/services/',
+      ws_endpoint: 'ws://lb-wso2-1091626109.us-east-1.elb.amazonaws.com:9099',
+      wss_endpoint: 'wss://lb-wso2-1091626109.us-east-1.elb.amazonaws.com:8099',
+      http_endpoint: 'http://lb-wso2-1091626109.us-east-1.elb.amazonaws.com:8280',
+      https_endpoint: 'https://lb-wso2-1091626109.us-east-1.elb.amazonaws.com:8243',
+      websub_event_receiver_http_endpoint: "http://lb-wso2-1091626109.us-east-1.elb.amazonaws.com:9021",
+      websub_event_receiver_https_endpoint: "https://lb-wso2-1091626109.us-east-1.elb.amazonaws.com:8021"}
 
 sync_runtime_gateway_labels: ["Default"]
 
