CONFIGURANDO UM NOVO LB AWS

--- a/ansible-apim-4.1.0.1/dev/host_vars/apim_1.yml
+++ b/ansible-apim-4.1.0.1/dev/host_vars/apim_1.yml
@@ -18,13 +18,13 @@
 # NOTE: The parameterized values has the default values from the original pack. Please change them according to your
 # requirements. If you need to add additional configurations, please use the custom.yml under each role.
 
-hostname: lb-wso2-1091626109.us-east-1.elb.amazonaws.com
+hostname: lb-aws-wso2-665612561.us-east-1.elb.amazonaws.com
 ports_offset: 0
 
 
 
 # api-manager.xml configs
-oauth_configs_revoke_api_url: https://lb-wso2-1091626109.us-east-1.elb.amazonaws.com:${https.nio.port}/revoke
+oauth_configs_revoke_api_url: https://lb-aws-wso2-665612561.us-east-1.elb.amazonaws.com:${https.nio.port}/revoke
 
 # Heap memory allocation
 apim_memory: -Xms256m -Xmx1024m
