--- a/ansible-apim-4.1.0.1/dev/group_vars/apim.yml
+++ b/ansible-apim-4.1.0.1/dev/group_vars/apim.yml
@@ -91,11 +91,11 @@ setup_wso2_enabled: true
 
 # Server URL of the Authentication service. Make sure to import the Key Manager's public certificate to WSO2 API-M's
 # client-truststore.jks. For more information, see https://docs.wso2.com/display/ADMIN44x/Creating+New+Keystores
-key_manager_server_url: https://lb-aws-wso2-665612561.us-east-1.elb.amazonaws.com:${mgt.transport.https.port}/services/
+key_manager_server_url: https://LB-WSO2-1425364127.sa-east-1.elb.amazonaws.com:${mgt.transport.https.port}/services/
 ####
 # API Store related configurations
-api_devportal_url: https://lb-aws-wso2-665612561.us-east-1.elb.amazonaws.com:${mgt.transport.https.port}/devportal
-api_devportal_server_url: https://lb-aws-wso2-665612561.us-east-1.elb.amazonaws.com:${mgt.transport.https.port}/services/
+api_devportal_url: https://LB-WSO2-1425364127.sa-east-1.elb.amazonaws.com:${mgt.transport.https.port}/devportal
+api_devportal_server_url: https://LB-WSO2-1425364127.sa-east-1.elb.amazonaws.com:${mgt.transport.https.port}/services/
 
 # Gateway configurations
 gateway_environments:
@@ -103,13 +103,13 @@ gateway_environments:
       name: 'Default',
       provider: 'wso2',
       description: 'This is a hybrid gateway that handles both production and sandbox token traffic.',
-      service_url: 'https://lb-aws-wso2-665612561.us-east-1.elb.amazonaws.com:${mgt.transport.https.port}/services/',
-      ws_endpoint: 'ws://lb-aws-wso2-665612561.us-east-1.elb.amazonaws.com:9099',
-      wss_endpoint: 'wss://lb-aws-wso2-665612561.us-east-1.elb.amazonaws.com:8099',
-      http_endpoint: 'http://lb-aws-wso2-665612561.us-east-1.elb.amazonaws.com:8280',
-      https_endpoint: 'https://lb-aws-wso2-665612561.us-east-1.elb.amazonaws.com:8243',
-      websub_event_receiver_http_endpoint: "http://lb-aws-wso2-665612561.us-east-1.elb.amazonaws.com:9021",
-      websub_event_receiver_https_endpoint: "https://lb-aws-wso2-665612561.us-east-1.elb.amazonaws.com:8021"}
+      service_url: 'https://LB-WSO2-1425364127.sa-east-1.elb.amazonaws.com:${mgt.transport.https.port}/services/',
+      ws_endpoint: 'ws://LB-WSO2-1425364127.sa-east-1.elb.amazonaws.com:9099',
+      wss_endpoint: 'wss://LB-WSO2-1425364127.sa-east-1.elb.amazonaws.com:8099',
+      http_endpoint: 'http://LB-WSO2-1425364127.sa-east-1.elb.amazonaws.com:8280',
+      https_endpoint: 'https://LB-WSO2-1425364127.sa-east-1.elb.amazonaws.com:8243',
+      websub_event_receiver_http_endpoint: "http://LB-WSO2-1425364127.sa-east-1.elb.amazonaws.com:9021",
+      websub_event_receiver_https_endpoint: "https://LB-WSO2-1425364127.sa-east-1.elb.amazonaws.com:8021"}
 
 sync_runtime_gateway_labels: ["Default"]
 
@@ -139,13 +139,13 @@ workflow_client_registration_endpoint: https://localhost:9443/client-registratio
 
 # Datasource configurations
 wso2am_db_type: postgres
-wso2am_db_url: jdbc:postgresql://wso2-db.cmlelzqpemzm.us-east-1.rds.amazonaws.com:5432/WSO2AM_DB
+wso2am_db_url: jdbc:postgresql://database-wso2.c70ju7lotdkg.sa-east-1.rds.amazonaws.com:5432/WSO2AM_DB
 wso2am_db_username: postgres
 wso2am_db_password: sapatovelho
 wso2am_db_validation_query: SELECT 1
 
 wso2shared_db_type: postgres
-wso2shared_db_url: jdbc:postgresql://wso2-db.cmlelzqpemzm.us-east-1.rds.amazonaws.com:5432/WSO2SHARED_DB
+wso2shared_db_url: jdbc:postgresql://database-wso2.c70ju7lotdkg.sa-east-1.rds.amazonaws.com:5432/WSO2SHARED_DB
 wso2shared_db_username: postgres
 wso2shared_db_password: sapatovelho
 wso2shared_db_validation_query: SELECT 1
